# appchain-discovol

./: Cargo.toml  README.TXT  README.md  SHA256SUMS  discovolSpec.json  docker-compose.yml  shell.nix
docs/: FunctionSpec.md  README.md
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
pallets/dev/: Cargo.toml
pallets/dev/src/: lib.rs
pallets/invite/: Cargo.toml
pallets/invite/src/: lib.rs
pallets/register/: Cargo.toml
pallets/register/src/: lib.rs
pallets/rif/: Cargo.toml
pallets/rif/src/: lib.rs
pallets/spread/: Cargo.toml
pallets/spread/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs  mock.rs
pallets/tool/: Cargo.toml
pallets/tool/src/: lib.rs
resources/: build-raw  chainspec.json  customSpec.json  discovol-mainnet_chainspec-snippet.json  discovol-octopus-mainnet.json  discovolSpec.json  discovolSpecRaw.json  discovolSpec_.json  octopus-mainnet.json  testnet.json
resources-testnet/: build-raw  build-spec  discovolSpecRaw.json  discovolSpecRaw_.json
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
scripts/: docker_run.sh
